--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/CSS/reset.css">
+    <link rel="stylesheet" href="src/CSS/style.css">
     <title>Desafio Frontend mentor - Bento grid</title>
 </head>
+
 <body>
-    
+    <section class="conteiner">
+        <div class="conteudo social-media">
+            <h3>Social Media <span>10x</span> <i>Faster</i> with AI</h3>
+            <img src="./src/assets/images/illustration-five-stars.webp" alt="">
+            <p>Over 4, 5-star reviews</p>
+        </div>
+
+        <div class="conteudo multiple-platforms">
+            <img src="./src/assets/images/illustration-multiple-platforms.webp" alt="Instagram and Twitter">
+            <h4>Manage multiple accounts and platforms.</h4>
+        </div>
+
+        <div class="conteudo calendar">
+            <h4>Maintain a consistent posting schedule.</h4>
+            <img src="./src/assets/images/illustration-consistent-schedule.webp" alt="Calendar">
+        </div>
+
+        <div class="conteudo time-to-post">
+            <h4>Schedule to social media.</h4>
+            <img src="./src/assets/images/illustration-schedule-posts.webp" alt="Best Time to Post">
+            <p>Optimize post timings to publish content at the perfect time for your audience</p>
+        </div>
+
+        <div class="conteudo follower-growth">
+            <img src="./src/assets/images/illustration-grow-followers.webp" alt="Follower Growth">
+            <h4>Grow followers with non-stop content.</h4>
+        </div>
+
+        <div class="conteudo audience-growth">
+            <h3>>56%</h3>
+            <p>faster audience growth</p>
+            <img src="./src/assets/images/illustration-audience-growth.webp" alt="Faster audience growth">
+        </div>
+
+        <div class="conteudo create-post">
+            <h3>Create and schedule content <i>quicker.</i></h3>
+            <img src="/src/assets/images/illustration-create-post.webp" alt="Create Post">
+        </div>
+
+        <div class="conteudo write-content">
+            <h4>Write your content using AI.</h4>
+            <img src="./src/assets/images/illustration-ai-content.webp" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
