Entrega do projeto ainda faltando alguns ajustes mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="conteiner">
+    <section class="container">
         <div class="conteudo social-media">
             <h3>Social Media <span>10x</span> <i>Faster</i> with AI</h3>
             <img src="./src/assets/images/illustration-five-stars.webp" alt="">
